@@ -71,6 +71,12 @@
 			<artifactId>fenixedu-academic-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.qubit.solution.fenixedu</groupId>
+			<artifactId>fenixedu-academic-core</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
 		</dependency>
