@@ -1,3 +1,5 @@
+- Refactor: Reuse existing test data initialization methods [#qubIT-Fenix-5150]
+
 2.12.4 (14-10-2024)
 - Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]
 
